--- a/src/main/webapp/secure/userRegister.xhtml
+++ b/src/main/webapp/secure/userRegister.xhtml
@@ -24,7 +24,7 @@ and open the template in the editor.
                     <fieldset style="background: #ffffff" >
                         <br></br>
 
-                        <p:panelGrid columns="6"  styleClass="ui-noborder ui-panelGrid-black">
+                        <p:panelGrid columns="4"  styleClass="ui-noborder ui-panelGrid-black">
                             <p:outputLabel value="Nombre : " />
                             <p:inputText id="nombre"  value="#{userView.usuario.nombre}"
                                          />
@@ -33,7 +33,7 @@ and open the template in the editor.
                             <p:inputText id="apellido" value="#{userView.usuario.apellido}"
                                          /> 
                             
-                              <p:outputLabel value="Email : " />
+                              <p:outputLabel value="Correo : " />
                               <p:inputText id="nombre"  value="#{userView.usuario.email}"
                                          />
 
@@ -56,16 +56,6 @@ and open the template in the editor.
                             <p:outputLabel  style="margin-left:  50px" value="Contraseña:" />
                             <p:password id="contraseña"  value="#{userView.usuario.pass}"
                                         /> 
-
-                            <p:outputLabel  style="margin-left:  100px" value="Correo:" />
-                            <p:password id="correo" 
-                                        /> 
-
-                            <p:outputLabel style="margin-top:  30px"  for="console" value="Rol :" />
-                            <h:selectOneMenu styleClass="form-control"  id="console" style="width:180px;margin-top:  30px">
-                                <f:selectItem itemLabel="--Seleccionar--" itemValue="" />
-                                <f:selectItems value="#{userView.rols}"/>
-                            </h:selectOneMenu>
 
                         </p:panelGrid>
                         <br></br><br></br>
